# fencing_tableau

./: .gitignore  .readthedocs.yaml  README.md  VERSION.txt  _version.py  attr_checker.py  countries.json  credentials.txt  csv_util.py  elimination_tree.py  exceptions.py  fancing_tableau.py  fencer.py  fencing_tableau.py  log_parser.py  main.py  match.py  matches.json  notes.py  package-lock.json  package.json  piste.py  push_notification.py  pyproject.toml  random_generator.py  test.py  testfencers.csv  tf.csv  tib.csv  tournament.py  update.sh  update_server.sh  wsgi.py
approvals/: DZ4R7Z.csv  FCRKRA.txt  V1DBMJ.csv  XO4E3J.txt
build_your_startlist/: J9TTOZD1B7.csv  R6O9WKMHDB.csv
deprecated/: elimination_tree.py  fencing_tableau.py  prelim_groups.py  standing.py
docs/: Principles.rst  Userguide.rst  Utilities.rst  conf.py  fencer.rst  index.rst  main.rst  match.rst  pyproject.toml  requirements.in  requirements.txt
flags/: list_flags.json  list_flags.py
frontend/: .gitignore  customTypes.ts  package-lock.json  package.json  rollup.config.js  svelte.config.js  tailwind.config.js
static/: example_startlist.csv  package-lock.json  package.json  template.csv
templates/: 404.html  brackets.html  build_your_startlist.html  dashboard.html  error.html  fencer.html  fencer_login.html  get_started.html  imprint.html  index.html  live_ref.html  logs.html  m_index.html  matches.html  options.html  piste_overview.html  privacy.html  qr.html  qr_match.html  start_form.html  tableau.html  terms.html  tournaments.html
test_data/: testfencers.csv  tf.csv  tf1.csv  (+1 more)
(+124 files in other folders)
